[gd_scene load_steps=4 format=2]

[ext_resource path="res://Button.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Button.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.09902

[node name="Button" type="Area2D" groups=["Giver"]]
collision_layer = 0
monitorable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Button_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Button_area_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
